--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,12 @@
       }
     }
   },
+  {
+	"ConnectionStrings": {
+	  "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Private;Foreign Keys=True;Pooling=True",
+	  "umbracoDbDSN_ProviderName": "Microsoft.Data.SQLite"
+	}
+  },
   "Umbraco": {
     "CMS": {
       "Global": {
@@ -23,7 +29,10 @@
         }
       },
       "Unattended": {
-        "UpgradeUnattended": true
+        "UpgradeUnattended": true,
+		"UnattendedUserName": "Andy_CHIU",
+        "UnattendedUserEmail": "andy.chiu@optionprc.com",
+        "UnattendedUserPassword": "P@ssw0rd"
       },
       "Security": {
         "AllowConcurrentLogins": false
