--- a/appsettings.json
+++ b/appsettings.json
@@ -29,6 +29,7 @@
         }
       },
       "Unattended": {
+		"InstallUnattended": true,
         "UpgradeUnattended": true,
 		"UnattendedUserName": "Andy_CHIU",
         "UnattendedUserEmail": "andy.chiu@optionprc.com",
