--- a/appsettings.json
+++ b/appsettings.json
@@ -23,7 +23,7 @@
         }
       },
       "Unattended": {
-		"InstallUnattended": true,
+        "UpgradeUnattended": true
       },
       "Security": {
         "AllowConcurrentLogins": false
